Updated desktop sign in page and initial email validation prompt template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,6 +13,7 @@
 @import "jackhammer";
 @import "profiles";
 @import "landing";
+@import "verify_email";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
