--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -15,8 +15,10 @@
 
             <%= text_field_tag :e, nil, {class: "input--text", placeholder: "New Email Address"}%>
             <%= hidden_field_tag :update_email, :value => true %>
-            <%= submit_tag "Resend Email ", class: "btn" %>
 
+            <div class="form-input--wrap form-input--wrap-submit form-input--wrap-desktop">
+                <%= submit_tag "Resend Email ", class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
         <% end %>
 
     <div class='change_email_form'>
