Finish desktop confirmation template styling - Note: need to fix birthday to be a datepicker

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -1555,7 +1555,7 @@ button {
     .mobile-container {
         padding: 60px 0 50px;
         background-color: #333;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
         left: 0;
         position: absolute;
