Fix button copy on post confirmation form page

--- a/app/views/users/confirmed.html.erb
+++ b/app/views/users/confirmed.html.erb
@@ -21,7 +21,7 @@
         <%= select_tag(:option, options_for_select([[],['Dunno', 1], ['Never', 2], ['X-Mas', 3]]), { class: "input--select js-input--select", "data-placeholder" => "Birthday" }) %>
 
         <div class="form-input--wrap form-input--wrap-submit form-input--wrap-desktop">
-            <%= submit_tag "Resend Email ", class: "form-input" %>
+            <%= submit_tag "Submit", class: "form-input" %>
         </div><!-- /.form-input--wrap -->
     <% end %>
 </main><!-- /.confirmation-page__content -->
