--- a/app/views/users/_resend_update_form.html.erb
+++ b/app/views/users/_resend_update_form.html.erb
@@ -4,7 +4,7 @@
   <%= hidden_field_tag :update_email, :value => true %>
 
   <div class="form-input--wrap form-input--wrap-submit form-input--wrap-desktop">
-      <%= submit_tag "Resend Email ", class: "form-input" %>
+      <%= submit_tag "Update & Resend ", class: "form-input" %>
   </div><!-- /.form-input--wrap -->
 
 <% end %>
