--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -11,14 +11,18 @@
         <h1 class="confirmation-page__title">Get Verified</h1>
         <p class="confirmation-page__copy">Thank you for signing up! An email has been sent to <%= @user.email %>. Please confirm your account by clicking the link in the email.</p>
 
-    <%= form_tag('/resend_verify', remote: true) do |f| %>
+    <div class="js-resend-email resend-email">
+        <%= form_tag('/resend_verify', remote: true) do |f| %>
 
-        <div class="form-input--wrap form-input--wrap-submit form-input--wrap-desktop">
-            <%= submit_tag "Resend Email ", class: "form-input" %>
-        </div><!-- /.form-input--wrap -->
-    <% end %>
+            <div class="form-input--wrap form-input--wrap-submit form-input--wrap-desktop">
+                <%= submit_tag "Resend Email ", class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
+        <% end %>
 
-    <div class='change_email_form' style='display:none'>
+        <p class="js-show-email-form show-email-form disclaimer--us-only disclaimer--us-only-home">Not Your Email?</p>
+    </div>
+
+    <div class='js-change_email_form change_email_form change_email_form--hidden'>
         <%= render 'users/resend_update_form'%>
     </div>
 </main><!-- /.confirmation-page__content -->
