--- a/app/views/user_notifier/send_confirmation_email.html.erb
+++ b/app/views/user_notifier/send_confirmation_email.html.erb
@@ -1,7 +1,7 @@
 Thanks for signing up for Luckee. Click the link below to verify your email:<br><br>
 
 <% if @user.provider == 'facebook' %>
-    <%= link_to "Confirm your email", set_username_url(vid: @user.verify_token,confirmed:"true") %>
+    <%= link_to "Confirm your email", confirmed_url(vid: @user.verify_token,confirmed:"true") %>
 <% else %>
-    <%= link_to "Confirm your email", root_url(vid: @user.verify_token,confirmed:"true") %>
+    <%= link_to "Confirm your email", confirmed_url(vid: @user.verify_token,confirmed:"true") %>
 <% end %>
