--- a/app/views/users/correct_mail.js.erb
+++ b/app/views/users/correct_mail.js.erb
@@ -1,1 +1,1 @@
-alert('resent');
+$('.confirmation-page__copy').html("We have sent another email to <%= @user.email %>. Please confirm your account by clicking the link in the email.");
