Add mobile styling for confirmation flow

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -14,6 +14,7 @@
 @import "jackhammer";
 @import "loading";
 @import "surveys";
+@import "verify_email";
 
 @mixin box_sizing {
     -moz-box-sizing: border-box;
