--- a/app/views/users/confirmed.html.erb
+++ b/app/views/users/confirmed.html.erb
@@ -3,19 +3,16 @@
 <%= link_to root_path do %><img src="/assets/homescreen-logo.png" class="header-img--logo"><% end %>
 
 <main class="confirmation-page__content">
-        <a href="/">
-            <img class="confirmation-page__logo" src="assets/luckee-font.png">
-        </a>
-
         <%= embedded_svg('svgs/check.svg', :class => 'confirmation-page__icon') %>
         <h1 class="confirmation-page__title">Email Confirmed</h1>
         <p class="confirmation-page__copy">Thank you for confirming your email! Complete the form below and start earning credits!</p>
 
      <%= form_tag('/user_details') do |f| %>
-        <div>
-        <%= text_field_tag :first_name, nil, {class: "input--text input--text--2-col", placeholder: "First Name",required: true}%>
-        <%= text_field_tag :last_name, nil, {class: "input--text input--text--2-col", placeholder: "Last Name", required: true}%>
-        </div>
+        <div class="confirmation-page__input-wrap">
+            <%= text_field_tag :first_name, nil, {class: "input--text input--text--left input--text--2-col", placeholder: "First Name", required: true}%>
+            <%= text_field_tag :last_name, nil, {class: "input--text input--text--right input--text--2-col", placeholder: "Last Name", required: true}%>
+        </div><!-- /.confirmation-page__input-wrap
+         -->
         <%= select_tag(:gender, options_for_select([[],['Male', 1], ['Female', 2], ['Other', 3]]), { class: "input--select js-input--select", "data-placeholder" => "Gender",required: true }) %>
         <!-- Tried to use rails form helper but jquery ui datepicker was throwing an error -->
         <%# text_field_tag :e, nil, {class: "input--text js-datepicker", placeholder: "Birthday"}%>
