--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -301,6 +301,10 @@ button {
     display:block !important;
     border-width:0 !important;
     min-height: 50px;
+
+    &.form-input--no-icon {
+        padding: 0 0 0 20px !important;
+    }
 }
 .mobile-form {
     .desktop-signup & {
