--- a/app/assets/stylesheets/verify_email.css.scss
+++ b/app/assets/stylesheets/verify_email.css.scss
@@ -1,82 +1,10 @@
-.confirmation-page--desktop {
-    background-image: url(/assets/landscape-bg.jpg);
-    background-position: center;
 
-    .app-wrapper {
-        height: 100vh;
-    }
-
-    .navigation {
+.confirmation-page {
+    // Remove form validation helpers - Temp
+    .form__required {
         display: none;
     }
 
-    .confirmation-page__content {
-        background-color: rgba($white, 0.75);
-        width: 50vw;
-        margin: auto;
-        max-width: 500px;
-        padding: 20px 50px;
-        border-radius: 5px;
-
-        @include vertical-align();
-    }
-
-    .confirmation-page__logo {
-        position: absolute;
-        top: -75px;
-        width: 200px;
-        height: auto;
-        left: 50%;
-        margin-left: -100px;
-    }
-
-    .confirmation-page__icon {
-        width: 50px;
-        height: auto;
-    }
-
-    .confirmation-page__title,
-    .confirmation-page__copy {
-        font-family: $sans;
-    }
-
-    .confirmation-page__title {
-        color: $purple;
-        font-size: $xxxl;
-    }
-
-    .confirmation-page__copy {
-        margin-bottom: 25px;
-    }
-
-    // Move to forms
-    .input--text {
-        border: none;
-        box-shadow: none;
-        border-radius: 2px;
-        background-color: #ecf0f1;
-        height: 45px !important;
-        padding-left: 10px;
-
-        @include input-color(#555);
-
-
-        &.input--text--2-col {
-            width: 49%;
-            display: block;
-
-            &:first-child {
-                float: left;
-            }
-
-            &:last-child {
-                float: right;
-            }
-        }
-    }
-}
-
-.confirmation-page {
     .chosen-container {
         width: 100%;
         background-color: #ecf0f1;
@@ -119,6 +47,146 @@
             .chosen-single {
                 background: none;
             }
+        }
+    }
+
+    // Desktop Styles
+    &.confirmation-page--desktop {
+        background-image: url(/assets/landscape-bg.jpg);
+        background-position: center;
+
+        .app-wrapper {
+            height: 100vh;
+        }
+
+        .navigation {
+            display: none;
+        }
+
+        .confirmation-page__content {
+            background-color: rgba($white, 0.75);
+            width: 50vw;
+            margin: auto;
+            max-width: 500px;
+            padding: 20px 50px;
+            border-radius: 5px;
+
+            @include vertical-align();
+        }
+
+        .confirmation-page__logo {
+            position: absolute;
+            top: -75px;
+            width: 200px;
+            height: auto;
+            left: 50%;
+            margin-left: -100px;
+        }
+
+        .confirmation-page__icon {
+            width: 50px;
+            height: auto;
+        }
+
+        .confirmation-page__title,
+        .confirmation-page__copy {
+            font-family: $sans;
+        }
+
+        .confirmation-page__title {
+            color: $purple;
+            font-size: $xxxl;
+        }
+
+        .confirmation-page__copy {
+            margin-bottom: 25px;
+        }
+
+        // Move to forms
+        .input--text {
+            border: none;
+            box-shadow: none;
+            border-radius: 2px;
+            background-color: #ecf0f1;
+            height: 45px !important;
+            padding-left: 10px;
+
+            @include input-color(#555);
+
+            &.input--text--2-col {
+                width: 49%;
+                display: block;
+
+                &.input--text--right {
+                    float: right;
+                }
+
+                &.input--text--left {
+                    float: left;
+                }
+            }
+        }
+    }
+
+    // Mobile Styles
+    &.confirmation-page--mobile {
+        .header-img--logo {
+            display: none;
+        }
+
+        .confirmation-page__icon {
+            width: 50px;
+            height: auto;
+            margin-bottom: 15px;
+        }
+
+        .confirmation-page__title {
+            color: $purple;
+            font-size: $xxl;
+            font-weight: 300;
+            margin-bottom: 5px;
+        }
+
+        .confirmation-page__copy {
+            color: $dark-font;
+            line-height: 20px;
+            margin-bottom: 20px;
+        }
+
+        .mobile-container {
+            height: 100vh;
+        }
+
+        .confirmation-page__content {
+            @include vertical-align;
+        }
+
+        .form-input {
+            @include input-color(#55556d);
+        }
+
+        .form-input--wrap-submit {
+            margin-top: 30px;
+        }
+
+        .form-input--no-icon {
+            width: 100% !important;
+            box-sizing: border-box;
+        }
+
+        .input--select {
+            border: none;
+            border-radius: 4px;
+            margin-top: 17px;
+            width: 100%;
+            padding-left: 15px;
+            height: 50px;
+            background-color: $clouds;
+        }
+
+        .show-email-form {
+            color: $black;
+            text-decoration: underline;
         }
     }
 }
