--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <meta property="og:description" content="Play free games. Earn Real Cash" />
     <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
 
-
+    <!-- Propeller ads -->
+    <meta name="propeller" content="6d0c37444c1cbc4f10031a713459e4ba" />
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
