--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -22,6 +22,9 @@
         <meta property="og:description" content="Play free games. Earn Real Cash" />
         <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
 
+        <!-- Propeller ads -->
+        <meta name="propeller" content="6d0c37444c1cbc4f10031a713459e4ba" />
+
         <!-- iPhone SPLASHSCREEN-->
         <link href="/assets/apple-touch-startup-image-320x460.png" media="(device-width: 320px)" rel="apple-touch-startup-image">
         <!-- iPhone (Retina) SPLASHSCREEN-->
