--- a/app/views/users/confirmed_mobile.html.erb
+++ b/app/views/users/confirmed_mobile.html.erb
@@ -6,11 +6,14 @@
         <a href="/">
             <img class="confirmation-page__logo" src="assets/luckee-font.png">
         </a>
-
+        <% if @verified_incomplete %>
+            <h1 class="confirmation-page__title">Complete your profile</h1>
+            <p class="confirmation-page__copy">Complete the form below to continue gaming!</p>
+        <% else %>
         <%= embedded_svg('svgs/check.svg', :class => 'confirmation-page__icon') %>
-        <h1 class="confirmation-page__title">Email Confirmed</h1>
-        <p class="confirmation-page__copy">Thank you for confirming your email! Complete the form quick below!</p>
-
+            <h1 class="confirmation-page__title">Email Confirmed</h1>
+            <p class="confirmation-page__copy">Thank you for confirming your email! Complete the form quick below!</p>
+        <% end %>
      <%= form_tag('/user_details') do |f| %>
         <div class="confirmation-page__input-wrap">
             <div class="form-input--wrap">
