--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,7 +30,7 @@
       <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
-        <%= f.text_field :name, placeholder: 'Username', class: "trans-input trans-input--text" %>
+        <%= f.text_field :name, placeholder: 'Username', class: "trans-input trans-input--text js-auto-focus" %>
 
         <%= f.email_field :email, placeholder: 'Email', class: "trans-input trans-input--text" %>
 
