--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,6 +14,7 @@
 @import "profiles";
 @import "landing";
 @import "verify_email";
+@import "2048/main";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
