Fix styling on confirmaton page when verification is incomplete'

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -30,7 +30,8 @@ body {
 
     &.gameplay-page,
     &.intermediate,
-    &.tutorial-page  {
+    &.tutorial-page,
+    &.confirmation-page--mobile  {
         .bottom-navigation {
             display: none;
         }
