--- a/app/views/users/confirmed_mobile.html.erb
+++ b/app/views/users/confirmed_mobile.html.erb
@@ -3,11 +3,8 @@
 <%= link_to root_path do %><img src="/assets/homescreen-logo.png" class="header-img--logo"><% end %>
 
 <main class="confirmation-page__content">
-    <a href="/">
-        <img class="confirmation-page__logo" src="assets/luckee-font.png">
-    </a>
-
     <% if @verified_incomplete %>
+        <%= embedded_svg('svgs/avitar.svg', :class => 'confirmation-page__icon') %>
         <h1 class="confirmation-page__title">Complete your profile</h1>
         <p class="confirmation-page__copy">Complete the form below to continue gaming!</p>
     <% else %>
@@ -25,7 +22,7 @@
             <div class="form-input--wrap">
                 <%= text_field_tag :last_name, current_user.lastname, {class: "form-input form-input--no-icon", placeholder: "Last Name", required: true}%>
             </div>
-            
+
             <% if current_user.provider == 'facebook' %>
                 <%= text_field_tag :username, current_user.name, {class: "form-input form-input--no-icon", placeholder: "Username (shown to other users)", required: true}%>
             <% end %>
