--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -956,7 +956,8 @@ p {
     color: $red;
 }
 .mobile-header{
-    .mobile-header--hide & {
+    .mobile-header--hide &,
+    .confirmation-page--mobile & {
         display: none;
     }
         position: fixed;
