--- a/app/assets/stylesheets/verify_email.css.scss
+++ b/app/assets/stylesheets/verify_email.css.scss
@@ -138,7 +138,7 @@
         .confirmation-page__icon {
             width: 50px;
             height: auto;
-            margin-bottom: 15px;
+            // margin-bottom: 15px;
         }
 
         .confirmation-page__title {
@@ -186,6 +186,7 @@
             padding-left: 15px;
             height: 50px;
             background-color: $clouds;
+            -webkit-appearance:none;
         }
 
         .show-email-form {
