--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -8,8 +8,8 @@
         <script>
         (function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(chref=d.href).replace(e.href,"").indexOf("#")&&(!/^[a-z\+\.\-]+:/i.test(chref)||chref.indexOf(e.protocol+"//"+e.host)===0)&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone");
         </script>
-      
-         
+
+
 
         <%= stylesheet_link_tag "mobile", media: "all",
                                                "data-turbolinks-track" => true %>
@@ -145,14 +145,8 @@
     </head>
     <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %> <% if current_user %> logged-in <% end %>">
 
-        <% if current_user %>
-            <div class="js-loading-screen se-pre-con">
-                <div class='circle circle--1'></div>
-                <div class='circle circle--2'></div>
-                <div class='circle circle--3'></div>
-                <div class='circle circle--4'></div>
-            </div>
-        <% end %>
+        <%= render 'layouts/form_errors' %>
+        <%= render 'layouts/loading_screen' %>
 
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
