--- a/app/assets/stylesheets/verify_email.css.scss
+++ b/app/assets/stylesheets/verify_email.css.scss
@@ -135,10 +135,18 @@
             display: none;
         }
 
+        .confirmation-page__content {
+            margin-top: 20px;
+        }
+
         .confirmation-page__icon {
             width: 50px;
             height: auto;
             // margin-bottom: 15px;
+        }
+
+        .confirmation-page__input-wrap {
+            margin-bottom: 17px;
         }
 
         .confirmation-page__title {
