--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -5,13 +5,13 @@
             <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
                 <%= link_to game_path(g) do %>
                     <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
-                    <%= image_tag(g.image, :class=>'game-image') %>
+                    <%= image_tag(g.game_image({advertiser_id:nil,desktop:false}), :class=>'game-image') %>
                     </div>
                 <% end %>
             <% else %>
                 <%= link_to unlock_game_path(g.slug) do %>
                     <div class="game-wrapper--locked game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
-                        <%= image_tag(g.image, :class=>'game-image') %>
+                        <%= image_tag(g.game_image({advertiser_id:nil,desktop:false}), :class=>'game-image') %>
                         <img src="/assets/locked.png" class="locks">
                     </div>
                 <% end %>
