--- a/app/views/games/_twentyfortyeight_m.html.erb
+++ b/app/views/games/_twentyfortyeight_m.html.erb
@@ -5,7 +5,7 @@
         <a class="restart-button">New Game</a>
       </div>      
       <div class="scores-container">
-        <div class="credit-container"><%= current_user.credits.blank? '0' : current_user.credits %></div>
+        <div class="credit-container"><%= current_user.credits.blank? ? '0' : current_user.credits %></div>
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
