fixing flappy link for mobile

--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -3,7 +3,7 @@
     <div class='game-list-container'>
         <% @games.each do | g | %>
             <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
-                <%= link_to game_path(g) do %>
+                <%= link_to game_path(g,a:@advertiser_id) do %>
                     <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
                     <%= image_tag(g.game_image({advertiser_id:@advertiser_id,desktop:false}), :class=>'game-image') %>
                     </div>
